# map-my-world

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: crud.py  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: da6e6d1188e3_init_db.py
app/api/: depends.py  main.py
app/api/models/: __init__.py  category.py  locations.py  review.py
app/api/routes/: categories.py  locations.py  reviews.py
app/core/: config.py  db.py
