[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Omar Castiblanco <ing.omar.castiblanco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = "^2.0.31"
psycopg = {extras = ["binary"], version = "^3.1.13"}
geoalchemy2 = "^0.15.1"
pydantic-extra-types = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
exclude = [".venv"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
